--- a/templates/management/administrator/profile.html
+++ b/templates/management/administrator/profile.html
@@ -1,4 +1,4 @@
-{% extends "management/main.html" %}
+{% extends "management/administrator/layout.html" %}
 <!DOCTYPE html>
 <html lang="en">
   {% load static %}
@@ -11,243 +11,170 @@
   </head>
 
   <body>
-    {% block main_content%}
+    {% block page_content %}
 
-    <!-- ======= Header ======= -->
-    {% include 'management/administrator/includes/header.html' %}
-    <!-- End Header -->
-
-    <!-- ======= Navbar ======= -->
-    {% include 'management/administrator/includes/navbar.html' %}
-    <!-- End Navbar -->
-
-    <!-- Breadcomb area Start-->
-    <div class="breadcomb-area">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="breadcomb-list">
-              <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                  <div class="breadcomb-wp">
-                    <div class="breadcomb-icon">
-                      <i class="notika-icon notika-form"></i>
-                    </div>
-                    <div class="breadcomb-ctn">
-                      <h2>Form Examples</h2>
-                      <p>
-                        Welcome to Notika
-                        <span class="bread-ntd">Admin Template</span>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-3">
-                  <div class="breadcomb-report">
-                    <button
-                      data-toggle="tooltip"
-                      data-placement="left"
-                      title="Download Report"
-                      class="btn"
-                    >
-                      <i class="notika-icon notika-sent"></i>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
+    <div class="page-header">
+      <div class="row">
+        <div class="col-md-6 col-sm-12">
+          <div class="title">
+            <h4>My Profile</h4>
           </div>
+          <nav aria-label="breadcrumb" role="navigation">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <a href="{% url 'adm_dashboard' %}">Dashboard</a>
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">
+                My Profile
+              </li>
+            </ol>
+          </nav>
         </div>
       </div>
     </div>
-    <!-- Breadcomb area End-->
-
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-          <div class="form-example-wrap">
-            <div class="cmp-tb-hd">
-              <h2>Basic Example</h2>
-              <p>
-                Individual form controls automatically receive some global
-                styling. All textual 'input', 'textarea', and 'select' elements
-                with <code>.form-control</code> are set to width: 100%; by
-                default. Wrap labels and controls in
-                <code>.form-group</code> for optimum spacing.
-              </p>
-            </div>
-            <div class="form-example-int">
-              <div class="form-group">
-                <label>Email Address</label>
-                <div class="nk-int-st">
-                  <input
-                    type="text"
-                    class="form-control input-sm"
-                    placeholder="Enter Email"
-                  />
-                </div>
-              </div>
-            </div>
-            <div class="form-example-int mg-t-15">
-              <div class="form-group">
-                <label>Password</label>
-                <div class="nk-int-st">
-                  <input
-                    type="text"
-                    class="form-control input-sm"
-                    placeholder="Password"
-                  />
-                </div>
-              </div>
-            </div>
-            <div class="form-example-int mg-t-15">
-              <div class="fm-checkbox">
-                <label
-                  ><input type="checkbox" class="i-checks" /> <i></i> Don't
-                  forget to check me out</label
-                >
-              </div>
-            </div>
-            <div class="form-example-int mg-t-15">
-              <button class="btn btn-success notika-btn-success">Submit</button>
-            </div>
-          </div>
+    <div class="min-height-200px">
+      <div class="card-box mb-30">
+        <div class="pd-20">
+          <h4 class="h4">Publication Details</h4>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-md-12">
-          <div class="form-example-wrap">
-            <div class="card-body">
-              <div class="row">
-                <div class="col-lg-12 mb-4">
-                  <span class="">
-                    Full names:
-                    <h4 class="title">
-                      {{user.first_name}} {{user.last_name}}
-                    </h4>
-                  </span>
-                </div>
-                <div class="col-lg-12 mb-1">
-                  <p>
-                    Email:
-                    <span class="h6">{{ user.email }}</span>
-                  </p>
-                </div>
-                <div class="col-lg-12 mb-1">
-                  <p>
-                    Gender:
-                    <span class="h6">{{ user.gender }}</span>
-                  </p>
-                </div>
-                <div class="col-lg-12 mt-30">
-                  <button
-                    type="button"
-                    class="btn btn-light btn-rounded float-right mr-1"
-                    data-toggle="modal"
-                    data-target="#updateAddresModal"
-                  >
-                    <i class="fa fa-settings text-primary"></i> Change Password
-                  </button>
-                  <h6 class="sub-title">User Credential</h6>
+        <div class="card-body pb-20">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-example-wrap">
+                <div class="card-body">
                   <div class="row">
-                    <div class="col-sm-12 col-xl-6">
+                    <div class="col-lg-12 mb-4">
+                      <span class="">
+                        Full names:
+                        <h4 class="title">
+                          {{user.first_name}} {{user.last_name}}
+                        </h4>
+                      </span>
+                    </div>
+                    <div class="col-lg-12 mb-1">
                       <p>
                         Email:
-                        <span class="h6"> {{ user.email }} </span>
+                        <span class="h6">{{ user.email }}</span>
                       </p>
                     </div>
-                    <div class="col-sm-12 col-xl-6">
+                    <div class="col-lg-12 mb-1">
                       <p>
-                        Password:
-                        <span class="h6"> ******** </span>
+                        Gender:
+                        <span class="h6">{{ user.gender }}</span>
                       </p>
+                    </div>
+                    <div class="col-lg-12 mt-30">
+                      <button
+                        type="button"
+                        class="btn btn-light btn-rounded float-right mr-1"
+                        data-toggle="modal"
+                        data-target="#updateAddresModal"
+                      >
+                        <i class="fa fa-settings text-primary"></i> Change
+                        Password
+                      </button>
+                      <h6 class="sub-title">User Credential</h6>
+                      <div class="row">
+                        <div class="col-sm-12 col-xl-6">
+                          <p>
+                            Email:
+                            <span class="h6"> {{ user.email }} </span>
+                          </p>
+                        </div>
+                        <div class="col-sm-12 col-xl-6">
+                          <p>
+                            Password:
+                            <span class="h6"> ******** </span>
+                          </p>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </div>
 
-      <div
-        class="modal fade"
-        id="updateAddresModal"
-        tabindex="-1"
-        role="dialog"
-        aria-labelledby="updateAddresModalTitle"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="updateAddresModalTitle">
-                <i class="fa fa-settings text-primary"></i> CHANGE PASSWORD
-              </h5>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
+          <div
+            class="modal fade"
+            id="updateAddresModal"
+            tabindex="-1"
+            role="dialog"
+            aria-labelledby="updateAddresModalTitle"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="updateAddresModalTitle">
+                    <i class="fa fa-cogs"></i> CHANGE PASSWORD
+                  </h5>
+                  <button
+                    type="button"
+                    class="close"
+                    data-dismiss="modal"
+                    aria-label="Close"
+                  >
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <form action="" method="post">
+                  {% csrf_token %}
+                  <div class="modal-body">
+                    <div class="form-group">
+                      <label for="old_pass"> Old password </label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        name="old_pass"
+                        id="old_pass"
+                        placeholder="Old password ..."
+                        required
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="pass1">New Password</label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        name="pass1"
+                        id="pass1"
+                        placeholder="New password ..."
+                        required
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="pass2">Confirm Password</label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        name="pass2"
+                        id="pass2"
+                        placeholder="Confirm password ..."
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button
+                      type="submit"
+                      name="update_password"
+                      class="btn btn-success"
+                    >
+                      <i class="fa fa-save"></i>
+                      Submit
+                    </button>
+                  </div>
+                </form>
+              </div>
             </div>
-            <form action="" method="post">
-              {% csrf_token %}
-              <div class="modal-body">
-                <div class="form-group">
-                  <label for="old_pass"> Old password </label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    name="old_pass"
-                    id="old_pass"
-                    placeholder="Old password ..."
-                    required
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="pass1">New Password</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    name="pass1"
-                    id="pass1"
-                    placeholder="New password ..."
-                    required
-                  />
-                </div>
-                <div class="form-group">
-                  <label for="pass2">Confirm Password</label>
-                  <input
-                    type="password"
-                    class="form-control"
-                    name="pass2"
-                    id="pass2"
-                    placeholder="Confirm password ..."
-                    required
-                  />
-                </div>
-              </div>
-              <div class="modal-footer">
-                <button
-                  type="button"
-                  class="btn btn-secondary"
-                  data-dismiss="modal"
-                >
-                  Close
-                </button>
-                <button
-                  type="submit"
-                  name="update_password"
-                  class="btn btn-primary"
-                >
-                  <i class="ik ik-save"></i>
-                  Submit
-                </button>
-              </div>
-            </form>
           </div>
         </div>
       </div>
