--- a/templates/management/commune/dashboard.html
+++ b/templates/management/commune/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "management/main.html" %}
+{% extends "management/commune/layout.html" %}
 <!DOCTYPE html>
 <html lang="en">
   {% load static %}
@@ -11,8 +11,48 @@
   </head>
 
   <body>
-    {% block main_content%}
+    {% block page_content %}
 
+    <div class="page-header">
+      <div class="row">
+        <div class="col-md-6 col-sm-12">
+          <div class="title">
+            <h4>Dashboard</h4>
+          </div>
+          <nav aria-label="breadcrumb" role="navigation">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item active" aria-current="page">
+                Dashboard
+              </li>
+            </ol>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <div class="card-box pd-20 height-100-p mb-30">
+      <div class="row align-items-center">
+        <div class="col-md-4">
+          <img
+            src="{% static 'staff/vendors/images/banner-img.png' %}"
+            alt=""
+          />
+        </div>
+        <div class="col-md-8">
+          <h4 class="font-20 weight-500 mb-10 text-capitalize">
+            Welcome back
+            <div class="weight-600 font-30 text-blue">
+              {{user.first_name}} {{user.last_name}}!
+            </div>
+          </h4>
+          <p class="font-18 max-width-600">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde hic
+            non repellendus debitis iure, doloremque assumenda. Autem modi,
+            corrupti, nobis ea iure fugiat, veniam non quaerat mollitia animi
+            error corporis.
+          </p>
+        </div>
+      </div>
+    </div>
     {% endblock %}
   </body>
 </html>
