--- a/templates/management/commune/profile.html
+++ b/templates/management/commune/profile.html
@@ -1,4 +1,4 @@
-{% extends "management/main.html" %}
+{% extends "management/commune/layout.html" %}
 <!DOCTYPE html>
 <html lang="en">
   {% load static %}
@@ -11,7 +11,181 @@
   </head>
 
   <body>
-    {% block main_content%}
+    {% block page_content %}
+
+    <div class="page-header">
+      <div class="row">
+        <div class="col-md-6 col-sm-12">
+          <div class="title">
+            <h4>My Profile</h4>
+          </div>
+          <nav aria-label="breadcrumb" role="navigation">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item">
+                <a href="{% url 'chief_dashboard' %}">Dashboard</a>
+              </li>
+              <li class="breadcrumb-item active" aria-current="page">
+                My Profile
+              </li>
+            </ol>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <div class="min-height-200px">
+      <div class="card-box mb-30">
+        <div class="pd-20">
+          <h4 class="h4">Publication Details</h4>
+        </div>
+        <div class="card-body pb-20">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-example-wrap">
+                <div class="card-body">
+                  <div class="row">
+                    <div class="col-lg-12 mb-4">
+                      <span class="">
+                        Full names:
+                        <h4 class="title">
+                          {{user.first_name}} {{user.last_name}}
+                        </h4>
+                      </span>
+                    </div>
+                    <div class="col-lg-12 mb-1">
+                      <p>
+                        Email:
+                        <span class="h6">{{ user.email }}</span>
+                      </p>
+                    </div>
+                    <div class="col-lg-12 mb-1">
+                      <p>
+                        Phone:
+                        <span class="h6">{{ user.phone }}</span>
+                      </p>
+                    </div>
+                    <div class="col-lg-12 mb-1">
+                      <p>
+                        Gender:
+                        <span class="h6">{{ user.gender }}</span>
+                      </p>
+                    </div>
+                    <div class="col-lg-12 mt-30">
+                      <button
+                        type="button"
+                        class="btn btn-light btn-rounded float-right mr-1"
+                        data-toggle="modal"
+                        data-target="#updateAddresModal"
+                      >
+                        <i class="fa fa-settings text-primary"></i> Change
+                        Password
+                      </button>
+                      <h6 class="sub-title">User Credential</h6>
+                      <div class="row">
+                        <div class="col-sm-12 col-xl-6">
+                          <p>
+                            Email:
+                            <span class="h6"> {{ user.email }} </span>
+                          </p>
+                        </div>
+                        <div class="col-sm-12 col-xl-6">
+                          <p>
+                            Password:
+                            <span class="h6"> ******** </span>
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div
+            class="modal fade"
+            id="updateAddresModal"
+            tabindex="-1"
+            role="dialog"
+            aria-labelledby="updateAddresModalTitle"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog modal-dialog-centered" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="updateAddresModalTitle">
+                    <i class="fa fa-cogs"></i> CHANGE PASSWORD
+                  </h5>
+                  <button
+                    type="button"
+                    class="close"
+                    data-dismiss="modal"
+                    aria-label="Close"
+                  >
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <form action="" method="post">
+                  {% csrf_token %}
+                  <div class="modal-body">
+                    <div class="form-group">
+                      <label for="old_pass"> Old password </label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        name="old_pass"
+                        id="old_pass"
+                        placeholder="Old password ..."
+                        required
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="pass1">New Password</label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        name="pass1"
+                        id="pass1"
+                        placeholder="New password ..."
+                        required
+                      />
+                    </div>
+                    <div class="form-group">
+                      <label for="pass2">Confirm Password</label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        name="pass2"
+                        id="pass2"
+                        placeholder="Confirm password ..."
+                        required
+                      />
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button
+                      type="button"
+                      class="btn btn-secondary"
+                      data-dismiss="modal"
+                    >
+                      Close
+                    </button>
+                    <button
+                      type="submit"
+                      name="update_password"
+                      class="btn btn-success"
+                    >
+                      <i class="fa fa-save"></i>
+                      Submit
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Container area End-->
 
     {% endblock %}
   </body>
